--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         placeholder="Nome ou Número"
         required>
     </form>
+
+    <div class="buttons">
+        <button id="bnt-prev" class="button">Prev &lt;</button>
+        <button id="bnt-next" class="button">Next &lg;</button>
+    </div>
+
+    <img class="pokedex" src="pokedex.png" alt="Pokedéx">
     
     <script src="app.js"></script>
 </body>
